--- a/gateway/tire/tire.toml
+++ b/gateway/tire/tire.toml
@@ -1,6 +1,22 @@
-host="0.0.0.0"
-port=10001
-
+host = "0.0.0.0"
+port = 10001
+token-limit = 1000
+read-timeout = 3
 
 [log]
 level = "debug"
+
+    #file log related config
+    [log.file]
+
+    #Log filename, leave empty to disable file log.
+    filename = "tire.log"
+
+    #Max size for a single file, in MB.
+    max-size = 10
+
+    #Max log keep days, default is never deleting.
+    max-days = 10
+
+    #Maximum number of old log files to retain
+    max-backups = 90
