--- a/gateway/tire/tire.toml
+++ b/gateway/tire/tire.toml
@@ -6,17 +6,17 @@ read-timeout = 3
 [log]
 level = "debug"
 
-    #file log related config
+    #file log related config.
     [log.file]
 
     #Log filename, leave empty to disable file log.
     filename = "tire.log"
 
-    #Max size for a single file, in MB and cannot be large than 4096MB
+    #Max size for a single file, in MB and cannot be large than 4096MB.
     max-size = 10
 
     #Max log keep days, default is never deleting.
     max-days = 10
 
-    #Maximum number of old log files to retain
+    #Maximum number of old log files to retain.
     max-backups = 90
