--- a/deploy/vehicle/vehicle.toml
+++ b/deploy/vehicle/vehicle.toml
@@ -1,10 +1,11 @@
 host = "0.0.0.0"
 port = 10002
 token-limit = 1000
-read-timeout = 900
+read-timeout = 20
+transfer-url = "https://api.halouhuandian.com/Aimonitor/transfer.html"
 
 [log]
-level = "info"
+level = "debug"
 
     #file log related config.
     [log.file]
